--- a/OopSolidProject/OopSolidProject.vcxproj.filters
+++ b/OopSolidProject/OopSolidProject.vcxproj.filters
@@ -21,5 +21,14 @@
     <ClCompile Include="ExampleSOne.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="ExampleSTwo.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="ExampleO.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="ExampleLOne.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
