--- a/OopSolidProject/OopSolidProject.vcxproj
+++ b/OopSolidProject/OopSolidProject.vcxproj
@@ -127,7 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ExampleIOne.cpp" />
+    <ClCompile Include="ExampleITwo.cpp" />
     <ClCompile Include="ExampleLOne.cpp" />
+    <ClCompile Include="ExampleLTwo.cpp" />
     <ClCompile Include="ExampleO.cpp" />
     <ClCompile Include="ExampleSOne.cpp" />
     <ClCompile Include="ExampleSTwo.cpp" />
