--- a/OopSolidProject/OopSolidProject.vcxproj.filters
+++ b/OopSolidProject/OopSolidProject.vcxproj.filters
@@ -30,5 +30,14 @@
     <ClCompile Include="ExampleLOne.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="ExampleLTwo.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="ExampleIOne.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="ExampleITwo.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
